# iogrid

./: .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  epic.md  feature.md
.github/workflows/: admin-ci.yml  asc-build-diagnose.yml  asc-cert-diagnostic.yml  asc-certs-diagnose.yml  asc-fix-testflight-access.yml  asc-privacy-labels-automation.yml  check-build-63-state.yml  check-build-state-575.yml  check-masroofi.yml  cli-ci.yml  contracts-ci.yml  coordinator-ci.yml  daemon-ci.yml  diagnose-beta-review.yml  docs-canonical.yml  docs-ci.yml  e2e-ci.yml  example-vcard-ci.yml  fix-575-deep.yml  fix-575-tester-and-submit.yml  fix-575-v3.yml  fix-575-v4.yml  fix-575-v5.yml  fix-575-v6.yml  fix-masroofi-builds.yml  ghcr-diag.yml  ghcr-make-public.yml  ghcr-pull-rotator.yml  harbor-mirror-verify.yml  identity-svc-integration.yml  installer-ci.yml  k8s-validate.yml  legal-ci.yml  marketing-ci.yml  mirror-xcode-to-ghcr.yml  mobile-ios-ci.yml  probe-app-data-usages.yml  probe-asc-privacy-v3.yml  probe-external-beta-state.yml  proto-ci.yml  (+25 more)
admin/: .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
admin/src/: auth.config.ts  middleware.ts
brand/: README.md  colors.md  typography.md
contracts/: Anchor.toml  Cargo.toml  Makefile  README.md  package.json  tsconfig.json
contracts/audit/: README.md  budget.md  checklist.md  scope.md  test-vectors.md  threat-model.md
contracts/migrations/: deploy.ts
contracts/programs/burn/: Cargo.toml
contracts/programs/burn/src/: lib.rs
contracts/programs/emission/: Cargo.toml
contracts/programs/emission/src/: lib.rs
contracts/programs/grid-token/: Cargo.toml
contracts/programs/grid-token/src/: lib.rs
contracts/programs/staking/: Cargo.toml
contracts/programs/staking/src/: lib.rs
contracts/programs/vesting/: Cargo.toml
contracts/programs/vesting/src/: lib.rs
contracts/scripts/: airdrop.sh  burn-replay.sh  devnet-deploy.sh  idl-publish.sh  local-validator.sh  upgrade.sh
contracts/tests/: _idl-dump.ts  _idl-helpers.ts  burn.ts  emission.ts  grid-token.ts  integration.ts  staking.ts  vesting.ts
coordinator/: README.md  go.work  go.work.sum
daemon/: Cargo.toml  Makefile  README.md
daemon/.cargo/: config.toml
daemon/crates/anti-abuse/: Cargo.toml
daemon/crates/anti-abuse/src/: lib.rs
daemon/crates/core/: Cargo.toml
daemon/crates/core/src/: capability_report.rs  ipc_mac.rs  lib.rs  main.rs  pair.rs  pair_handler.rs  tunnel.rs  update_windows.rs  updater.rs  vpn_wiring.rs  workloads.rs
daemon/crates/core/src/updater/: binary.rs  manifest.rs  mod.rs  types.rs  verify.rs  worker.rs
daemon/crates/platform-linux/: Cargo.toml
daemon/crates/platform-linux/src/: lib.rs
daemon/crates/platform-mac/: Cargo.toml  README.md
daemon/crates/platform-mac/src/: lib.rs
daemon/crates/platform-windows/: Cargo.toml
daemon/crates/platform-windows/src/: lib.rs
daemon/crates/routing/: Cargo.toml
daemon/crates/routing/examples/: wg_handshake_proof.rs
daemon/crates/routing/src/: boringtun_impl.rs  health.rs  ice.rs  inner_sink.rs  lib.rs  peer_binder.rs  tun_forward.rs  vpn_listener.rs
daemon/crates/scheduler/: Cargo.toml
daemon/crates/scheduler/src/: lib.rs
daemon/crates/transport/: Cargo.toml  build.rs
daemon/crates/transport/src/: convert.rs  identity.rs  lib.rs  pb.rs  ruleset.rs
daemon/crates/ui-bridge/: Cargo.toml
daemon/crates/ui-bridge/src/: lib.rs
daemon/crates/workload-docker/: Cargo.toml
daemon/crates/workload-docker/src/: lib.rs
daemon/crates/workload-docker/tests/: integration_docker.rs
daemon/crates/workload-gpu/: Cargo.toml
daemon/crates/workload-gpu/src/: lib.rs
daemon/crates/workload-ios/: Cargo.toml
daemon/crates/workload-ios/src/: build_poller.rs  lib.rs  provision.rs
daemon/scripts/: bake-ios-image-from-base.sh  bake-slim-ios-image.sh  install-mac-daemon-launchagent.sh  provision-mac-provider.sh  wg_handshake_proof.sh
docs/: ARCHITECTURE.md  BUSINESS-STRATEGY.md  COMPETITORS.md  DNS_TLS.md  INCENTIVES.md  LEGAL.md  MARKET.md  MULTI_TENANT_MATRIX.md  OFFRAMP_PROVIDERS.md  PHASE0-SETUP.md  PHASE0-UNBLOCK.md  PHASE0_FIRST_CUSTOMER.md  ROADMAP.md  RUNBOOKS.md  RUNBOOK_STATUS.md  SECURITY-mTLS.md  SECURITY.md  SOLANA-ADDRESSES.md  SOLANA.md  TECH.md  TOKENOMICS.md  TRACKER.md  VPN-ARCHITECTURE.md  VPN-DEFINITION-OF-DONE-COMPREHENSIVE.md  VPN-PHASE-1-SMOKE-TEST.md  design-system.md  whitepaper.md
docs-site/: Dockerfile  README.md  astro.config.mjs  nginx.conf  package.json
e2e/: Makefile  README.md  bootstrap.sh  kind-config.yaml  seed.sh
examples/: go-bandwidth-proxy.go  java-api-key-rotation.java  python-stream-events.py  typescript-create-workload.ts
gitops/: README.md
installer/: README.md  install.ps1  install.sh
legal/: .markdownlint.json  README.md  aup.md  customer-tos.md  dpa.md  incident-response.md  privacy-policy.md  provider-tos.md  token-disclaimer.md
marketing/: .gitignore  Dockerfile  README.md  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
proto/: README.md  buf.gen.openapi.yaml  buf.gen.yaml  buf.yaml
releases/: Dockerfile  README.md  nginx.conf
scripts/: admin-auth-bootstrap.sh  bring-up-provider.sh  deploy-cron-heartbeat.sh  docs-canonical-check.sh  dynadot-apply.sh  go-live-iogrid-flux.sh  harbor-mirror-build.sh  identity-svc-jwt-keypair-gen.sh  iogrid-image-reroll-cron.sh  reroll-iogrid-deployments.sh  stripe-price-verify.sh  submit-ios-build.sh  test-reroll-resolver.sh
sdks/: Makefile  README.md  RELEASING.md
sdks/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdks/python/src/iogrid/: __init__.py  client.py  errors.py  types.py
sdks/python/tests/: test_client.py
web/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+1565 files in other folders)
