[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/transport",
    "crates/routing",
    "crates/workload-docker",
    "crates/workload-gpu",
    "crates/workload-ios",
    "crates/anti-abuse",
    "crates/scheduler",
    "crates/ui-bridge",
    "crates/platform-mac",
    "crates/platform-linux",
    "crates/platform-windows",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/iogrid/iogrid"
authors = ["iogrid contributors <eng@iogrid.org>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Errors / tracing
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# gRPC + HTTP. Trust store is `tls-webpki-roots` ONLY — see #327.
#
# We deliberately DO NOT enable `tls-roots`. That feature drags
# `rustls-native-certs` into the link map; on macOS the resulting
# `with_native_roots()` call walks the Keychain via
# `SecTrustSettingsCopyTrustSettings`, which can block indefinitely
# under MDM-managed / TCC-protected configurations (rustls-native-certs#75,
# #110). The daemon never reaches `connect_with_connector`, so the
# #246/#281 chain-walker can't even surface the cause — the symptom is
# the daemon going silent after "live dispatch bridge spawned".
#
# webpki-roots is the right answer because:
#   * Phase 0 coordinator is Let's Encrypt-signed (ISRG Root X1/X2) — in
#     webpki-roots.
#   * Private-CA deployments set `ConnectConfig::ca_pem` and we layer
#     the explicit CA via `ClientTlsConfig::ca_certificate(...)` —
#     independent of any OS trust store.
#   * Daemons run non-interactively; nothing about the OS trust store
#     can grant trust to a coordinator the public-CA chain wouldn't
#     already cover.
tonic = { version = "0.12", features = ["tls", "tls-webpki-roots"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
axum = { version = "0.7", features = ["macros"] }
hyper = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# TLS / crypto. Pin the `ring` crypto provider explicitly so every
# binary in the workspace gets it via default features — otherwise
# rustls 0.23 panics at first TLS handshake with "Could not
# automatically determine the process-level CryptoProvider from
# Rustls crate features". main.rs also runs an explicit
# CryptoProvider::install_default() as defense-in-depth.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls-pemfile = "2"

# DNS — pure-Rust async resolver. Replaces hyper's default
# GaiResolver (which calls tokio::task::spawn_blocking around
# getaddrinfo) on the coordinator-connect path. The GaiResolver
# blocking task is cancelled mid-flight whenever the parent
# future is polled-then-dropped by tower's reconnect / buffer
# middleware, which surfaces as "dns error → task NNN was
# cancelled" with no real DNS failure underneath. See #248.
hickory-resolver = "0.24"
url = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Misc
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1"
# Host identification — read the OS hostname so the daemon can self-
# report a human-friendly default display_name at pairing time, instead
# of letting the coordinator fall back to `provider-<short-id>`. The
# crate is tiny (one syscall: gethostname / GetComputerNameExW) with no
# transitive deps. Consumed by `iogrid-transport::identity` (PairingRequest)
# and `iogridd pair` in `crates/core/src/main.rs`. See
# `coordinator/services/providers-svc/internal/handlers/registration.go`
# PairDaemon for the server-side dedupe that pairs with this hostname.
hostname = "0.4"

# Container runners
bollard = "0.18"

# Local workspace crates
iogrid-core = { path = "crates/core" }
iogrid-transport = { path = "crates/transport" }
iogrid-routing = { path = "crates/routing" }
iogrid-workload-docker = { path = "crates/workload-docker" }
iogrid-workload-gpu = { path = "crates/workload-gpu" }
iogrid-workload-ios = { path = "crates/workload-ios" }
iogrid-anti-abuse = { path = "crates/anti-abuse" }
iogrid-scheduler = { path = "crates/scheduler" }
iogrid-ui-bridge = { path = "crates/ui-bridge" }
iogrid-platform-mac = { path = "crates/platform-mac" }
iogrid-platform-linux = { path = "crates/platform-linux" }
iogrid-platform-windows = { path = "crates/platform-windows" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
