[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iogrid"
version = "0.1.0"
description = "Official Python SDK for the iogrid customer API."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "iogrid", email = "support@iogrid.org" }]
requires-python = ">=3.10"
keywords = ["iogrid", "sdk", "proxy", "workload", "grid", "bandwidth"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "typing-extensions>=4.10",
]

[project.urls]
Homepage = "https://iogrid.org"
Repository = "https://github.com/iogrid/iogrid"
Issues = "https://github.com/iogrid/iogrid/issues"

[tool.hatch.version]
path = "src/iogrid/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/iogrid"]

[tool.hatch.build.targets.sdist]
include = ["src/iogrid", "README.md", "LICENSE", "tests"]

# ---------------------------------------------------------------------------
# Hatch environments
# ---------------------------------------------------------------------------

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.hatch.envs.default.scripts]
test = "pytest -q {args:tests}"
lint = "ruff check src tests"
fmt = "ruff format src tests"
typecheck = "mypy src"
check = ["lint", "typecheck", "test"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
