[package]
name = "iogrid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd supervisor — tokio runtime, top-level state machine, lifecycle orchestration."

[lib]
name = "iogrid_core"
path = "src/lib.rs"

[[bin]]
name = "iogridd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
# Pairing-code RNG. Used by the `pair` module to mint one-time install
# tokens. Added directly here (not workspace-pinned) because no other
# crate needs randomness yet.
rand = "0.8"
# Auto-update — Ed25519 manifest signature + per-binary signature, plus
# SHA-256 integrity, base64 wire encoding, semver-aware version pick,
# ureq for sync HTTP (the worker runs fetches inside spawn_blocking).
# Pinned to security-supported releases as of 2026-05-19.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
sha2 = "0.10"
base64 = "0.22"
semver = { version = "1", features = ["serde"] }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
# rustls — main.rs calls CryptoProvider::install_default() at startup
# to avoid the "Could not automatically determine the process-level
# CryptoProvider from Rustls crate features" panic.
rustls = { workspace = true }
# rcgen — generates the daemon's local ECDSA-P256 keypair + the PKCS#10
# CSR that travels in the PairingRequest. Before #235 the daemon wrote
# a placeholder string to ~/.iogrid/key.pem, which made every
# subsequent `Identity::from_pem` call return garbage and aborted tonic
# TLS handshakes at <1ms with "tls configuration failed: transport
# error" — the Phase 0 vCard E2E blocker.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

iogrid-transport = { workspace = true }
# VPN-542 (#542) wires the iogrid-routing VPN modules into this
# binary's supervisor; routing-real pulls in boringtun for the real
# WG userspace stack. Default-on so `cargo build --release` produces
# a binary that actually serves the VPN data plane (per the issue
# DoD); CI scaffold builds opt out with `--no-default-features`.
iogrid-routing = { workspace = true, features = ["routing-real"] }

# VPN-542: the supervisor wiring constructs a shared `reqwest::Client`
# + reads the boringtun `x25519::StaticSecret` type for WG-key
# persistence. Both crates are already in the transitive graph via
# iogrid-routing's routing-real feature — we just promote them to
# direct deps so the wiring code can name the types.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "253f7afb2b", default-features = false }
iogrid-anti-abuse = { workspace = true }
iogrid-scheduler = { workspace = true }
iogrid-ui-bridge = { workspace = true }
iogrid-workload-docker = { workspace = true }
iogrid-workload-gpu = { workspace = true }
iogrid-workload-ios = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
iogrid-platform-mac = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
iogrid-platform-linux = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
iogrid-platform-windows = { workspace = true }
