[package]
name = "iogrid-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd routing — WireGuard tunnel + SOCKS5/HTTP CONNECT acceptor for the bandwidth workload."

[lib]
name = "iogrid_routing"
path = "src/lib.rs"

[features]
default = []
# Pull in heavy crates (boringtun / socks5-server) only when the daemon binary
# is built with the `routing-real` feature. The scaffold compiles trait-shaped
# stubs that satisfy `cargo check --workspace`.
routing-real = []

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
iogrid-anti-abuse = { workspace = true }
iogrid-scheduler = { workspace = true }

# VPN-6 (#510): ICE candidate discovery + reporting.
# `if-addrs` is a tiny pure-Rust crate that wraps getifaddrs / iphlpapi
# for cross-platform local-interface enumeration. `reqwest` matches the
# workspace TLS posture — `rustls-tls` reuses the ring CryptoProvider
# already pinned in workspace deps (#327), so no extra link-map churn.
if-addrs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
