[package]
name = "iogrid-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd routing — WireGuard tunnel + SOCKS5/HTTP CONNECT acceptor for the bandwidth workload."

[lib]
name = "iogrid_routing"
path = "src/lib.rs"

[features]
default = []
# `routing-real` pulls in the real WireGuard userspace stack (boringtun)
# + per-peer state + UDP packet pump. Without this feature the crate
# compiles `NoopTunnel` only — the scaffold path tests + cargo check use.
# See iogrid#529 for what's gated behind this feature and what the
# follow-up SNAT/forwarding PR will plug in on top.
routing-real = ["dep:boringtun", "dep:x25519-dalek", "dep:base64", "dep:rand", "dep:parking_lot", "dep:blake2"]
# `routing-tun-forward` plugs a Linux TUN device + iptables MASQUERADE
# rule under the BoringTun decap path, so decapsulated customer packets
# get NAT'd out the daemon's WAN interface and replies routed back
# through the tunnel. The end-state demo (`curl ifconfig.me` returns the
# provider's residential IP) hinges on this feature being on. Linux-only;
# the sink module is `#[cfg(target_os = "linux")]`-gated. See #529 path c.
routing-tun-forward = ["routing-real", "dep:libc"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
iogrid-anti-abuse = { workspace = true }
iogrid-scheduler = { workspace = true }

# VPN-6 (#510): ICE candidate discovery + reporting.
# `if-addrs` is a tiny pure-Rust crate that wraps getifaddrs / iphlpapi
# for cross-platform local-interface enumeration. `reqwest` matches the
# workspace TLS posture — `rustls-tls` reuses the ring CryptoProvider
# already pinned in workspace deps (#327), so no extra link-map churn.
if-addrs = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# VPN-529 (#529): WireGuard userspace stack (boringtun) + key parsing.
# All `optional = true` so the default `NoopTunnel` scaffold path
# doesn't drag in ~30 transitive crates. Enabled via `routing-real`.
#
# Pulling boringtun from a pinned upstream commit instead of crates.io:
# every published 0.5.x / 0.6.0 release pins `x25519-dalek =
# "=2.0.0-rc.3"`, which transitively pulls `curve25519-dalek =
# "=4.0.0-rc.3"`. The workspace already has `ed25519-dalek = "^2.1"`
# (updater signature verification) which requires stable
# `curve25519-dalek = "^4"`; cargo can't resolve a stable range against
# a pre-release pin. Upstream master has moved on but no new release
# was cut — pinning the SHA matches Cloudflare's internal practice.
# Bumping requires confirming `Tunn::new` + `decapsulate` signatures.
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "253f7afb2b", optional = true, default-features = false }
x25519-dalek = { version = "2.0.1", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8", optional = true }
# parking_lot::RwLock for the peer registry — std::sync::RwLock would
# work but parking_lot avoids poisoning, which matters here because
# each Tunn::decapsulate call holds the write lock briefly + a panic
# inside boringtun would otherwise poison the whole peer table.
parking_lot = { version = "0.12", optional = true }

# G1 decap-fail diagnostic (#762/#701). On the RARE path where an inbound
# WG datagram fails to decapsulate against every registered peer, we
# recompute the handshake-init MAC1 keyed on OUR server static public key
# to tell apart a stale-SERVER-key client (mac1_ok=false → the NE baked an
# old server pubkey, the #760/build-186 class) from an unregistered/wrong
# CLIENT key (mac1_ok=true → a binding issue). `0.10` matches the version
# boringtun already pins (its `Blake2sMac<U16>` is the exact WG MAC1
# primitive), so cargo unifies to a single copy — no extra link-map churn.
blake2 = { version = "0.10", optional = true }

# Linux TUN setup syscalls (open, ioctl TUNSETIFF, read/write on the fd).
# Optional + Linux-only via `#[cfg(target_os = "linux")]` gates inside the
# sink module — non-Linux builds compile cleanly without libc.
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

# #781 end-to-end WG handshake proof harness. Uses the real boringtun
# stack, so it only compiles with the `routing-real` feature on (bare
# `cargo build`/`check` skips it).
[[example]]
name = "wg_handshake_proof"
required-features = ["routing-real"]
