[package]
name = "iogrid-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd transport — bidi gRPC stream to the iogrid coordinator over mTLS."

[lib]
name = "iogrid_transport"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync", "net"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
iogrid-anti-abuse = { workspace = true }
iogrid-scheduler = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
# Read OS hostname so the daemon can self-report a sensible default
# display_name on pair. See `identity::local_display_name`.
hostname = { workspace = true }
# #273: pre-resolved-IP connector for tonic Endpoint. See lib.rs comment
# on PinnedAddrConnector + Channel::connect for the why. We pull these
# as direct deps (rather than re-exporting via tonic) because tonic's
# `Endpoint::connect_with_connector` is generic over `tower::Service<Uri>`
# and we hand it a hand-rolled connector that overrides the resolver
# step with the supervisor-pinned IP. `hyper-util` is needed only for
# `TokioIo` (the hyper rt::Read+rt::Write wrapper around tokio's IO);
# `http` for the `Uri` type tonic hands the connector; `tower-service`
# for the `Service` trait the connector implements.
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http = "1"
tower-service = "0.3"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
