[package]
name = "iogrid-ui-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "iogridd UI bridge — localhost HTTP + SSE API the web management plane talks to."

[lib]
name = "iogrid_ui_bridge"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
iogrid-scheduler = { workspace = true }
iogrid-anti-abuse = { workspace = true }
uuid = { workspace = true }
